--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -34,6 +34,8 @@ html, body{
 
 h1, h2, h3 {
     color: var(--primary-color);
+    text-align: center;
+    width: 100%;
 }
 
 main{
@@ -89,8 +91,4 @@ footer section{
     gap: 0;
     box-shadow: none;
     font-size: .9rem;
-}
-
-.center{
-    text-align: center;
 }
